fix: new parallel implementation for search service with no errors and optimization